fixed scroll and shopping cart on small screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -291,10 +291,10 @@ a {
 
     #shopping-list {
         position: absolute;
-        top: -10px;
+        top: -1rem;
         right: 0;
         background-color: $background;
-        padding: 10px 20px 20px 20px;
+        padding: 10px 20px 60px 20px;
         width: 100vw;
         height: 100vh;
         overflow: hidden auto;
@@ -653,7 +653,7 @@ section {
 }
 
 #contact {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     position: fixed;
     top: 0;
@@ -715,13 +715,14 @@ section {
             height: 100%;
             display: flex;
             flex-direction: column;
-            padding: 30px;
+            padding: 10px 30px 60px 30px;
             justify-content: space-around;
             
             h3 {
                 width: 100%;
                 text-align: center;
                 font-size: 2rem;
+                margin: 20px 0;
             }
 
             input {
